fix spacing and error style

--- a/frontend/src/components/directoryForm/DirectoryBasics.module.css
+++ b/frontend/src/components/directoryForm/DirectoryBasics.module.css
@@ -100,7 +100,7 @@
 .input {
   display: flex;
   height: 2.2rem;
-  padding: 0.5rem 1.5rem;
+  padding: 0.7rem;
   align-items: center;
   width: 100%;
   border-radius: 5px;
